compiler/tests/should-fail/InvalidConstructorCall.via
/* InvalidConstructorCallError */

fun add10(a: int{A}, b: out Array[int]{B}) {
    out b = Array[int]{B}(10) + 10;
}

process main {
    val array = Array[int]{A}(10);
    val a: int{A} = 0;
    add10(a, val b);
    output a to alice;
}

host alice: {A}
host bob: {B}
